Move POM settings from profiling profile to test profile