@@ -98,6 +98,7 @@
         <performancetests>com.itextpdf.test.annotations.type.PerformanceTest</performancetests>
         <sampletests>com.itextpdf.test.annotations.type.SampleTest</sampletests>
         <unittests>com.itextpdf.test.annotations.type.UnitTest</unittests>
+        <slowtests>com.itextpdf.test.annotations.type.SlowTest</slowtests>
         <skipTests>true</skipTests>
         <logback.version>1.1.3</logback.version>
         <jfreechart.version>1.0.19</jfreechart.version>
@@ -297,7 +298,7 @@
                                 <id>validate</id>
                                 <phase>validate</phase>
                                 <configuration>
-                                    <consoleOutput>true</consoleOutput>
+                                    <consoleOutput>false</consoleOutput>
                                     <failOnViolation>false</failOnViolation>
                                     <failsOnError>false</failsOnError>
                                     <linkXRef>false</linkXRef>
@@ -317,7 +318,7 @@
                                 <id>validate</id>
                                 <phase>validate</phase>
                                 <configuration>
-                                    <consoleOutput>true</consoleOutput>
+                                    <consoleOutput>false</consoleOutput>
                                     <failOnViolation>false</failOnViolation>
                                     <failsOnError>false</failsOnError>
                                     <linkXRef>false</linkXRef>
@@ -398,9 +399,12 @@
                             <includes>
                                 <include>**/*Test.java</include>
                             </includes>
+                            <groups>${unittests}</groups>
+                            <forkCount>1</forkCount>
+                            <reuseForks>false</reuseForks>
                             <parallel>methods</parallel>
                             <threadCount>10</threadCount>
-                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                            <argLine>-Xmx1024m</argLine>
                         </configuration>
                     </plugin>
                     <!-- Run integration tests -->
@@ -418,9 +422,12 @@
                         </executions>
                         <configuration>
                             <skipTests>false</skipTests>
+                            <includes>
+                                <include>**/*Test.java</include>
+                            </includes>
+                            <groups>${slowtests}</groups>
                             <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                             <argLine>${jacoco.agent.argLine}</argLine>
-                            <!-- <parallel>methods</parallel> -->
                             <threadCount>1</threadCount>
                         </configuration>
                     </plugin>
